extends Sprite2D

#Bark button scropts
func _on_invite_to_game_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main pong.tscn")
	
func _on_backbutton_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main_menu_idk/menu scenes/control.tscn")

#Seb button scripts
func _on_invitetogameseb_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main pong.tscn")

func _on_backtocontrolseb_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main_menu_idk/menu scenes/control.tscn")

func _on_invitetogamenacho_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main pong.tscn")
	
func _on_backtocontrolnacho_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main_menu_idk/menu scenes/control.tscn")
#thorbuttons
func _on_invitetogameyap_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main pong.tscn")

func _on_backtocontrolyap_pressed():
	print("invitetogame")
	get_tree().change_scene_to_file("res://Main_menu_idk/menu scenes/control.tscn")
